Added first two sections

--- a/index.html
+++ b/index.html
@@ -19,31 +19,55 @@
           </ul>
         </div>
       </div>
-    </div>
-    <div class="content">
-      <div class="content-left">
-        <h1 class="content-title">This website is <br />awesome</h1>
-        <p class="content-caption">
-          This website has some subtext that goes here under the <br />main
-          title. It's a smaller font and the color is lower<br />
-          contrast.
-        </p>
-        <button class="hero-btn" type="button">Sign up</button>
+
+      <div class="content">
+        <div class="content-left">
+          <h1 class="content-title">This website is <br />awesome</h1>
+          <p class="content-caption">
+            This website has some subtext that goes here under the <br />main
+            title. It's a smaller font and the color is lower<br />
+            contrast.
+          </p>
+          <button class="hero-btn" type="button">Sign up</button>
+        </div>
+        <div class="content-right">
+          <img
+            class="hero-img"
+            src="/images/coffee.jpg"
+            alt="Cup of coffee beans spilled over"
+          />
+        </div>
       </div>
-      <div class="content-right">
-        <img
-          class="hero-img"
-          src="/images/coffee.jpg"
-          alt="Cup of coffee beans spilled over"
-        />
+    </div>
+    <div class="second-section">
+      <h2>Some random information.</h2>
+      <div class="card-container">
+        <div class="card">
+          <img class="card-img" src="/images/coffee.jpg" alt="" />
+          <p class="card-caption">this is the card caption</p>
+        </div>
+        <div class="card">
+          <img class="card-img" src="/images/coffee.jpg" alt="" />
+          <p class="card-caption">this is the card caption</p>
+        </div>
+        <div class="card">
+          <img class="card-img" src="/images/coffee.jpg" alt="" />
+          <p class="card-caption">this is the card caption</p>
+        </div>
+        <div class="card">
+          <img class="card-img" src="/images/coffee.jpg" alt="" />
+          <p class="card-caption">this is the card caption</p>
+        </div>
       </div>
     </div>
-    <div class="box-container">
-      <div class="box-header">Some random information.</div>
-      <div class="box">Box 1</div>
-      <div class="box">Box 2</div>
-      <div class="box">Box 3</div>
-      <div class="box">Box 4</div>
+    <div class="third-section">
+      <h3 class="quote">
+        This is an inspiring quote, or a testimonial from a <br />
+        customer. Maybe it's just filling up space, or maybe <br />
+        people will actually read it. Who knows? All I know <br />
+        is that it looks nice.
+      </h3>
+      <p class="quote-author">-Thor, God of Thunder</p>
     </div>
   </body>
 </html>
