--- a/index.html
+++ b/index.html
@@ -8,66 +8,109 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="first-section">
-      <div class="navbar">
-        <div class="navbar-left"><h1 class="header-logo">Header Logo</h1></div>
-        <div class="navbar-right">
-          <ul class="header-link">
-            <li>About</li>
-            <li>Photos</li>
-            <li>Sign up</li>
-          </ul>
-        </div>
+    <div class="top-container">
+      <div class="header">
+        <h1>Header Logo</h1>
+        <ul>
+          <li><a href="">header link one</a></li>
+          <li><a href="">header link two</a></li>
+          <li><a href="">header link three</a></li>
+        </ul>
       </div>
-
-      <div class="content">
-        <div class="content-left">
-          <h1 class="content-title">This website is <br />awesome</h1>
-          <p class="content-caption">
-            This website has some subtext that goes here under the <br />main
-            title. It's a smaller font and the color is lower<br />
-            contrast.
+      <div class="hero-container">
+        <div class="left-hero">
+          <h2>This website is awesome</h2>
+          <p>
+            This website has some subtext that goes here under the <br />
+            main title. It's a smaller font and the color is lower <br />
+            contrast
           </p>
-          <button class="hero-btn" type="button">Sign up</button>
+          <button class="hero-sign-up">Sign up</button>
         </div>
-        <div class="content-right">
+        <div class="right-hero">
           <img
-            class="hero-img"
-            src="/images/coffee.jpg"
-            alt="Cup of coffee beans spilled over"
+            class="main-img"
+            src="images/coffee.jpg"
+            alt="spilled cup of coffee beans"
           />
         </div>
       </div>
     </div>
-    <div class="second-section">
-      <h2>Some random information.</h2>
+    <div class="middle-container">
+      <h3>Some random information.</h3>
       <div class="card-container">
         <div class="card">
-          <img class="card-img" src="/images/coffee.jpg" alt="" />
-          <p class="card-caption">this is the card caption</p>
+          <img
+            src="images/coffee.jpg"
+            class="card-img"
+            alt="spilled cup of coffee beans"
+          />
+          <p>
+            this is some subtext <br />
+            under an illustration <br />
+            or image
+          </p>
         </div>
         <div class="card">
-          <img class="card-img" src="/images/coffee.jpg" alt="" />
-          <p class="card-caption">this is the card caption</p>
+          <img
+            src="images/coffee.jpg"
+            class="card-img"
+            alt="spilled cup of coffee beans"
+          />
+          <p>
+            this is some subtext <br />
+            under an illustration <br />
+            or image
+          </p>
         </div>
         <div class="card">
-          <img class="card-img" src="/images/coffee.jpg" alt="" />
-          <p class="card-caption">this is the card caption</p>
+          <img
+            src="images/coffee.jpg"
+            class="card-img"
+            alt="spilled cup of coffee beans"
+          />
+          <p>
+            this is some subtext <br />
+            under an illustration <br />
+            or image
+          </p>
         </div>
         <div class="card">
-          <img class="card-img" src="/images/coffee.jpg" alt="" />
-          <p class="card-caption">this is the card caption</p>
+          <img
+            src="images/coffee.jpg"
+            class="card-img"
+            alt="spilled cup of coffee beans"
+          />
+          <p>
+            this is some subtext <br />
+            under an illustration <br />
+            or image
+          </p>
         </div>
       </div>
     </div>
-    <div class="third-section">
-      <h3 class="quote">
+    <div class="bottom-container">
+      <p>
         This is an inspiring quote, or a testimonial from a <br />
         customer. Maybe it's just filling up space, or maybe <br />
         people will actually read it. Who knows? All I know <br />
         is that it looks nice.
-      </h3>
-      <p class="quote-author">-Thor, God of Thunder</p>
+      </p>
+      <p class="author">-Thor, God of Thunder</p>
+    </div>
+    <div class="footer">
+      <div class="footer-border">
+        <div class="footer-border-left">
+          <p>Call to action! It's time!</p>
+
+          <p>
+            Sign up for our product by clicking that button right over there!
+          </p>
+        </div>
+        <div class="footer-border-right">
+          <button class="footer-btn">Sign up</button>
+        </div>
+      </div>
     </div>
   </body>
 </html>
